// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly 1`] = `
<DocumentFragment>
  .css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    />
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":r0:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly label 1`] = `
<DocumentFragment>
  .css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    >
      <div
        class="css-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":rc:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when checked 1`] = `
<DocumentFragment>
  .css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    />
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="true"
      data-disabled="false"
    >
      <input
        aria-checked="true"
        checked=""
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":r2:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when disabled 1`] = `
<DocumentFragment>
  .css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="true"
    class="css-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    />
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="true"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        disabled=""
        id=":r4:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label 1`] = `
<DocumentFragment>
  .css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-8ikytl-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    >
      <div
        class="css-15fwcc4-StyledRow e3f5lzv0"
      >
        test
        <sup>
          <svg
            class="css-8ikytl-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </sup>
      </div>
    </div>
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":r6:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label left 1`] = `
<DocumentFragment>
  .css-1gksb9y-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.css-1gksb9y-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-1gksb9y-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-8ikytl-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-1gksb9y-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    >
      <div
        class="css-15fwcc4-StyledRow e3f5lzv0"
      >
        test
        <sup>
          <svg
            class="css-8ikytl-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </sup>
      </div>
    </div>
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":r8:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with complex label 1`] = `
<DocumentFragment>
  .css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    >
      <div
        class="css-15fwcc4-StyledRow e3f5lzv0"
      >
        <span>
          Custom label rendered
        </span>
      </div>
    </div>
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":rk:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    >
      <div
        class="css-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":ri:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with helper 1`] = `
<DocumentFragment>
  .css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-3l2mjz-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    >
      <div
        class="css-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
      <p
        class="css-3l2mjz-StyledText e13y3mga0"
      >
        This is a helper
      </p>
    </div>
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":ro:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with labels on left 1`] = `
<DocumentFragment>
  .css-1gksb9y-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.css-1gksb9y-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-1gksb9y-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-1gksb9y-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    >
      <div
        class="css-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="css-pptpcl-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":rg:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with non default size 1`] = `
<DocumentFragment>
  .css-hfh15c-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-hfh15c-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 16.53px;
}

.css-hfh15c-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-2w8lgn-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 40px;
  height: 20px;
}

.css-2w8lgn-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-2w8lgn-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 12px;
  height: 12px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-2w8lgn-StyledToggle:focus-within,
.css-2w8lgn-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-2w8lgn-StyledToggle[data-disabled='false']:active:after {
  width: 16.53px;
}

.css-2w8lgn-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-2w8lgn-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-2w8lgn-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-2w8lgn-StyledToggle[data-checked='true']:focus-within,
.css-2w8lgn-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-2w8lgn-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-2w8lgn-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-hfh15c-StyledLabel e1wstm610"
  >
    <div
      class="css-155uuxj-Stack ehpbis70"
    />
    <div
      class="css-2w8lgn-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e1wstm611"
        id=":ra:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with tooltip 1`] = `
<DocumentFragment>
  .css-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.css-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.css-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.css-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.css-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.css-155uuxj-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.css-pptpcl-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.css-pptpcl-StyledToggle:hover {
  background-color: #d9dadd;
}

.css-pptpcl-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-pptpcl-StyledToggle:focus-within,
.css-pptpcl-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-pptpcl-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-pptpcl-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #8c40ef;
}

.css-pptpcl-StyledToggle[data-checked='true']:hover {
  background-color: #792dd4;
}

.css-pptpcl-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-pptpcl-StyledToggle[data-checked='true']:focus-within,
.css-pptpcl-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-pptpcl-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.css-pptpcl-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<div
    aria-controls=":rf:"
    aria-describedby=":rf:"
    class="css-1hzk1lh-StyledChildrenContainer e4h1g860"
    tabindex="0"
  >
    <label
      aria-disabled="false"
      class="css-r95p0q-StyledLabel e1wstm610"
    >
      <div
        class="css-155uuxj-Stack ehpbis70"
      >
        <div
          class="css-15fwcc4-StyledRow e3f5lzv0"
        >
          This is a label
        </div>
      </div>
      <div
        class="css-pptpcl-StyledToggle e1wstm612"
        data-checked="false"
        data-disabled="false"
      >
        <input
          aria-checked="false"
          class="css-1myp2ct-StyledCheckbox e1wstm611"
          id=":re:"
          name="test"
          type="checkbox"
          value=""
        />
      </div>
    </label>
  </div>
</DocumentFragment>
`;
